--- a/projects/teste-library/src/app/app.component.html
+++ b/projects/teste-library/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div>
-  <p>teste</p>
-  <thc-button label="Tesch Lib Button"></thc-button>
+  <thc-button class="thc-success" icon="fab fa-angular" label="Tesch Lib Success Button"></thc-button>
+  <thc-button class="thc-alert" label="Tesch Lib Alert Button"></thc-button>
+  <thc-button class="thc-info" label="Tesch Lib Info Button"></thc-button>
+  <thc-button class="thc-warning" label="Tesch Lib Warning Button"></thc-button>
+  <thc-button label="Tesch Lib Default Button"></thc-button>
 </div>
