--- a/projects/tesch-lib/src/lib/button/button.component.html
+++ b/projects/tesch-lib/src/lib/button/button.component.html
@@ -1,8 +1,9 @@
 <div
   class="thc-button {{ class }}"
-  [ngClass]="{ 'thc-button-icon': icon }"
   (click)="clicou.emit($event)"
 >
-  <span>{{ label }}</span>
-  <em class="icon" style="font-size: 1.5rem;" [attr.class]="icon"></em>
+  <div class="thc-button-container">
+    <span>{{ label }}</span>
+    <em class="icon" style="font-size: 1.5rem;" [attr.class]="icon"></em>
+  </div>
 </div>
