--- a/projects/tesch-lib/css/thc-styles.scss
+++ b/projects/tesch-lib/css/thc-styles.scss
@@ -8,6 +8,7 @@ $verde-dark: #4d908e;
 $azul-dark: #577590;
 $azul: #277da1;
 $branco: #F7F4F4;
+$preto: #000;
 $sucesso: #22bb33;
 $sucesso-opacity: #22bb3399;
 $alert: #bb2124;
@@ -19,10 +20,34 @@ $info-opacity: #5bc0de99;
 $outilne: #57759099;
 $bordaredonda: 5px;
 
+$azul-claro: #DFE3E5;
+$vermelho-forte: #B72E2E;
+$cinza-escuro: #4F4C4C;
+$cinza-claro: #F7F4F4;
+$cinza-medio: #D9D9D9;
+
+$fonte-link: #0084FF;
+$fonte-cinza: #666;
+$borda-cabecalho-mobile: #103D4A;
+$bg-rodape: #333;
+$bg-chamada-mobile: #00161C;
+
+$planos-cartao-start: #56CCF2;
+$planos-cartao-ultra: #B04CD9;
+$planos-cartao-mega: #E33B3B;
+
+$opensans: 'Open Sans' sans-serif;
+
+
 body {
-  font-family: 'Open Sans' sans-serif;
+  font-family: $opensans;
 }
 
 .thc-hidden {
   display: none;
+}
+
+.thc-container {
+  width: 1680px;
+  margin: 0 auto;
 }
