atualizada documentacao context-menu e navbar

--- a/projects/tesch-lib/src/lib/context-menu/context-menu.component.html
+++ b/projects/tesch-lib/src/lib/context-menu/context-menu.component.html
@@ -1,14 +1,14 @@
 <div>
   <a
     #contextMenu
-    class="action-button"
+    class="thc-action-button"
   >
     <em class="fas fa-chevron-down"></em>
   </a>
 
-  <div id="menu{{ actor?.id }}" *ngIf="show" class="menu-wrap">
-    <div class="context-menu" *ngFor="let action of actions">
-      <span (click)="action.command(actor)" class="menu-item" *ngIf="action.isVisible(actor)">
+  <div id="menu{{ actor?.id }}" *ngIf="show" class="thc-menu-wrap">
+    <div class="thc-context-menu" *ngFor="let action of actions">
+      <span (click)="action.command(actor)" class="thc-context-menu-item" *ngIf="action.isVisible(actor)">
         <span>{{ action.label }}</span>
         <span class="thc-action-icon">
           <em [attr.class]="action.icon"></em>
