--- a/projects/tesch-lib/src/lib/infinity-scrooler/infinity-scrooler.component.scss
+++ b/projects/tesch-lib/src/lib/infinity-scrooler/infinity-scrooler.component.scss
@@ -1,3 +1,5 @@
+@import '../../../css/thc-styles.scss';
+
 .thc-infinity-scrooler {
   box-shadow: inset -4px -4px 7px -3px rgb(50 50 50 / 73%), inset 4px 4px 7px -3px rgb(50 50 50 / 73%);
 }
